--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "start:horarios": "node server/removeExpiredHorarios.js"
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -18,9 +17,7 @@
     "react-hook-form": "^7.54.2",
     "react-modal": "^3.16.3",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
